<resources>
    <string name="app_name">GoogleMapApi</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyALf2rAUrIh7P3LhE1htrhJhLNbPj17rBE</string>
    <string name="invalid_lat_long_used">invalid coordinate used</string>
    <string name="service_not_available">Service not available</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="no_geocoder_available">No Geocoder available</string>
    <string name="str_btn_find">Search Location</string>
    <string name="findButton">Find</string>
    <string name="label_activity_main">MobileGo</string>


    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="no_maneuver_narrative">No maneuver narrative</string>
    <string name="arrive_destination">You have arrived at your destination!</string>

    <!-- CALENDAR ACTIVITY -->
    <string name="calendar_title">Calendar</string>
    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">DIM</string>
    <string name="mon">LUN</string>
    <string name="tue">MAR</string>
    <string name="wed">MER</string>
    <string name="thu">JEU</string>
    <string name="fri">VEN</string>
    <string name="sat">SAM</string>
    <string name="last_date">30</string>
    <string name="button_today">TODAY</string>
    <string name="new_reservation">NEW RESERVATION</string>
    <string name="day_view">Day view</string>
    <string name="gototoday">goToToday</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LogIn</string>
    <string name="btn_link_signup">Sign Up</string>
    <string name="login_title">LogIn</string>
    <string name="register_title">Register</string>
    <string name="search">Search</string>
    <string name="reservation_title">Reservation</string>
    <string name="button_week_save">Save modifications</string>


    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le profile</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="check_box_is_vendor">Etes-vous un proprietaire ?</string>
    <string name="profileactivity_title">Profile</string>

    <!-- VENDOR_CHAT ACTIVITY -->
    <string name="toolbar_title_vendor_chat_activity">Chats de discussions</string>
    <string name="text_input_title_vendor_chat_activity">Composer votre message</string>
    <string name="button_title_vendor_chat_activity">ENVOYER</string>
    <string name="text_view_vendor_chat_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>
    <string name="fcm_token">FCM Token: %s</string>

    <!-- GARAGE ACTIVITY -->
    <string name="popup_message_confirmation_delete_garage">Es-tu sûr(e) de vouloir supprimer ce garage ?</string>
    <string name="invalid_address">Address not found !</string>

    <!-- NAVIGATIONDRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- BRAINTREE PAYMENT -->
    <string name="failed_token">Client Failed to retrieve token from server</string>
    <string name="BraintreeFragment_initialized">BraintreeFragment is ready to use</string>
    <string name="issues_with_authorization">There was an issue with your authorization string</string>
    <string name="token_failed">Fail to retrieve client token </string>
    <string name="buy_now">BUY NOW</string>
</resources>
