<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/fui_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.Toolbar>

    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/baseMargin">

            <!-- APPLICATION IMAGE -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_gallery"/>

            <!-- PROGRESS BAR -->
            <ProgressBar
                android:id="@+id/profile_activity_progress_bar"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:visibility="invisible"
                android:layout_margin="@dimen/baseMargin"/>

            <!-- PROFILE IMAGE -->
            <ImageView
                android:id="@+id/profile_activity_imageview_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_profile"/>

        </LinearLayout>


        <!-- PROFILE USERNAME -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/profile_activity_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normalText"
            android:text="@string/text_input_username"
            android:layout_margin="@dimen/smallMargin"/>

        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/smallMargin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_email"
                android:textSize="@dimen/normalText"
                android:textStyle="bold"/>

            <!-- PROFILE EMAIL -->
            <TextView
                android:id="@+id/profile_activity_text_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normalText"
                android:paddingLeft="@dimen/smallMargin"/>

        </LinearLayout>



        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/smallMargin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N°Immatriculation :"
                android:textSize="@dimen/normalText"
                android:textStyle="bold"/>

            <!-- PROFILE EMAIL -->
            <EditText
                android:id="@+id/profile_activity_text_view_immatriculation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normalText"
                android:paddingLeft="@dimen/smallMargin"/>

        </LinearLayout>

        <!-- CHECKBOX IS USER VENDOR -->
        <CheckBox
            android:id="@+id/profile_activity_check_box_is_vendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_box_is_vendor"/>



    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_weight="1">

        <!-- BUTTON UPDATE USERNAME -->
        <Button
            android:id="@+id/profile_activity_button_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_update_account"
            android:textColor="#fff"
            android:textSize="@dimen/normalText"
            android:background="@drawable/button_radius_primary_color"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/smallMargin"
            android:padding="@dimen/smallMargin"/>

        <!-- BUTTON SIGN OUT -->
        <Button
            android:id="@+id/profile_activity_button_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_out_account"
            android:textColor="#fff"
            android:textSize="@dimen/normalText"
            android:background="@drawable/button_radius_error_color"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/smallMargin"
            android:padding="@dimen/smallMargin"/>

        <!-- BUTTON DELETE ACCOUNT -->
        <Button
            android:id="@+id/profile_activity_button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_delete_account"
            android:textColor="#fff"
            android:textSize="@dimen/normalText"
            android:background="@drawable/button_radius_accent_color"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/smallMargin"
            android:padding="@dimen/smallMargin"/>

    </LinearLayout>

</LinearLayout>